[package]
name = "blue-pill-blinky"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7" }
panic-halt = "0.2"
stm32f1xx-hal = { version = "0.9", features = ["stm32f103", "rt"] }

[profile.release]
codegen-units = 1
lto = true
debug = false
panic = "abort"

[profile.dev]
panic = "abort"
